Inmob-Salesforce/force-app/main/default/objects/Configuracion_General__c/Configuracion_General__c.object-meta.xml
<CustomObject>
    <label>Configuración General</label>
    <nameField>
        <label>Nombre de Configuración General</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuraciones Generales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>