Inmob-Salesforce/force-app/main/default/objects/Configuracion_General__c/fields/CI_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>CI_Descripcion__c</fullName>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>