Inmob-Salesforce/force-app/main/default/objects/Configuracion_General__c/fields/CI_LinkServicio__c.field-meta.xml
<CustomField>
    <fullName>CI_LinkServicio__c</fullName>
    <label>Link del Servicio</label>
    <length>200</length>
    <type>Text</type>
</CustomField>