Inmob-Salesforce/force-app/main/default/objects/Configuracion_General__c/fields/CI_Password__c.field-meta.xml
<CustomField>
    <fullName>CI_Password__c</fullName>
    <label>Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>