Inmob-Salesforce/force-app/main/default/objects/Configuracion_General__c/fields/CI_Usuario__c.field-meta.xml
<CustomField>
    <fullName>CI_Usuario__c</fullName>
    <label>Usuario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>