Inmob-Salesforce/force-app/main/default/objects/Configuracion_General__c/fields/CI_Valor__c.field-meta.xml
<CustomField>
    <fullName>CI_Valor__c</fullName>
    <label>Valor</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>