Inmob-Salesforce/force-app/main/default/objects/Configuracion_General__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CI_Valor__c</columns>
    <columns>CI_Descripcion__c</columns>
    <columns>CI_LinkServicio__c</columns>
    <columns>CI_Usuario__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>